Fix vertical align

--- a/css/asteroids_game.css
+++ b/css/asteroids_game.css
@@ -9,6 +9,7 @@ canvas {
   border: 3px solid lightgreen;
   margin: 10px;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .mode-button:hover {
